# nnUNet-vs-MGA

./: .flake8  .gitignore  LICENSE.md  README.md  pyproject.toml  scores.csv  scoresv2.csv
nnunetpaper/: _utils.py
nnunetpaper/data/: __init__.py  convert_binary_to_nifti.py  copy_times.py  create_disior_reference.py  dicom_dataset_descriptor.py  ident_missing_labels.py  keep_largest_island.py  prepare_nnunet_dataset.py  prepare_test_set.py  scores_to_csv.py  utils.py
nnunetpaper/measure/: collect_metrics.py  collect_multiclass_metrics.py  collect_timings.py
nnunetpaper/plot/: plot_metrics.py  plot_multiclass_metrics.py  plot_times.py
nnunetpaper/process/: combine_labels.py  create_bodymask.py  fill_holes_in_mask.py  keep_largest_island.py
nnunetpaper/stats/: difference.py  mean.py  multiclass_mean.py  run_mannwhitney.py
